# leaving-home

./: .gitignore  CMakeLists.txt  LeavingHome.cpp  LeavingHome.h  readme.md
lib/: .gitkeep
res/models/: crate.mtl  cube.mtl  drone.mtl  lightVolume.mtl  plane.mtl  rotor.mtl  stone.mtl  test.mtl  tree.mtl  tree2.mtl  unitcube.mtl
res/models/Brick Building Piece Set/: Straight_Edge_Roof_Wall_Inner_Corner.mtl  Straight_Edge_Wall.mtl
res/models/Drone Hub Building Piece Set/: Inner_Corner_Roof_Wall_Inner_Corner.mtl  Outer_Corner_Wall_Roof_Outer_Corner.mtl  Straight_Edge_Wall_Roof_Left.mtl  Straight_Edge_Wall_Roof_Right.mtl
res/models/Food Factory Building Piece Set/: Straight_Edge_Roof_Wall_Inner_Corner.mtl
res/models/Mine Building Piece Set/: Inner_Corner_Roof_Wall_Inner_Corner.mtl  Outer_Corner_Roof_Wall_Inner_Corner.mtl
res/models/Reforester Building Piece Set/: Inner_Corner_Wall_Roof_Right.mtl
res/models/Residence Building Piece Set/: Outer_Corner_Wall.mtl
res/models/Storage Building Piece Set/: Outer_Corner_Wall.mtl
res/models/Test Building Piece Set/: Inner_Corner_Wall_Roof_Right.mtl
res/models/Woodcutter Building Piece Set/: Straight_Edge_Wall_Roof_Right.mtl
res/shaders/: phong.vert  phongInstanced.frag  phongInstanced.geom  phongInstanced.vert  pickingInstanced.frag  pickingInstanced.vert  simple.vert  simpleInstanced.frag  simpleInstanced.vert  skybox.frag  skybox.vert  terrainInstanced.frag  terrainInstanced.geom  terrainInstanced.vert  waterInstanced.frag  waterInstanced.geom  waterInstanced.vert
res/shaders/deferred/: blur.frag  blur.vert  default.frag  default.vert  fxaa.frag  phong.frag  phongPoint.frag  phongPoint.vert  phongSpot.frag  phongSpot.vert  (+7 more)
src/: Main.cpp  Main.hpp
src/game/: DayNightCycle.cpp  DayNightCycle.hpp  Game.cpp  Game.hpp  PickingChunkSelection.cpp  PickingChunkSelection.hpp
src/rendering/: AbstractGame.hpp  Camera.cpp  Camera.hpp  RenderingEngine.cpp  RenderingEngine.hpp  RenderingEngineInit.cpp  RenderingEngineRender.cpp  Skybox.cpp  Skybox.hpp
src/ui/: Debug.cpp  Debug.hpp  GUI.cpp  GUI.hpp  Info.cpp  Info.hpp  ToolSelection.cpp  ToolSelection.hpp  Util.cpp  Util.hpp
src/util/: MathUtil.hpp
(+86 files in other folders)
