# CMakeList.txt : CMake project for LeavingHome, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("LeavingHome")

# Add source to this project's executable.
add_executable (LeavingHome "LeavingHome.cpp" "LeavingHome.h")

# TODO: Add tests and install targets if needed.
